# macropruner-ctx

./: .gitignore  INTEGRATION.md  LICENSE  MANIFEST.in  PLAN.md  README.md  README_zh.md  SETUP.md  bootstrap.py  cc_parser.py  cli.py  config.py  dep_graph.py  errors.py  expr_eval.py  mcp_server.py  mcp_wrapper.sh  patch_applier.py  pruner_core.py  pyproject.toml  skeletonizer.py  test_bootstrap.py  test_clang_sysroot.py  test_cli.py  test_config.py  test_dep_graph.py  test_errors.py  test_expr_eval.py  test_mcp_server.py  test_pruner.py  test_skeletonizer.py  test_token_budget.py  token_counter.py  小红书文案.md
.cache/clangd/index/: test_main.c.30DB032C4F463A8A.idx
.github/workflows/: example-pr-check.yml  tests.yml
.zhiyu/plans/: 1781159238225-sunny-squid.md
backends/: __init__.py  base.py  clang_backend.py  regex_backend.py
demo/: README.md  demo.sh
docs/: ARCHITECTURE.md  BACKENDS.md  CHANGELOG.md  CONFIG.md  ERRORS.md  ci-integration.md  macropruner_nameerror_rootcause.html  publishing.md  stage3-evaluation.md  usage.md
docs/dev-notes/: macropruner_indexerror_rootcause.html  macropruner_nameerror_rootcause.html
docs/prompts/: 01-basic.md  02-cross-compile.md  03-token-budget.md  04-oracle.md  05-safety.md  06-bootstrap-onboarding.md  README.md
examples/: README.md
integration/: ws63_integration_report.md  ws63_smoke.py
test_samples/: test_main.c
test_samples/deps_test/: app.c
test_samples/deps_test/include/: types.h  utils.h
tests/: test_backends.py  test_cc_parser_cache.py  test_conditional_dep_graph.py  test_mcp_server.py  test_patch_applier.py  test_pruner_realistic.py  test_safety.py  test_truncation.py
